samples/_failures_safe/1761290327_e093cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc5df344.c: In function ‘main’:
./samples/SAFE/__tmp_fc5df344.c:167:12: error: expected identifier or ‘(’ at end of input
  167 |     struct compression
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_fc5df344.c:167:12: error: expected declaration or statement at end of input
